# docs/swagger.yaml
@@ -1,16 +1,5 @@
 definitions:
-  apis.DebugResp:
-    properties:
-      probe_count:
-        type: integer
-      route_count:
-        type: integer
-      routes:
-        items:
-          $ref: '#/definitions/apis.DebugRouteResp'
-        type: array
-    type: object
-  apis.DebugRouteResp:
+  apis.DebugLogsResp:
     properties:
       cur_to_next_to_probe:
         description: 本次计算后需要避让的探头，格式为：cur;next;probe (A1;A2;探头)
@@ -23,6 +12,20 @@ definitions:
       route_probe_info:
         description: 本次路线信息传入的避让探头, 第一次传入的为空
         type: string
+    type: object
+  apis.DebugResp:
+    properties:
+      probe_count:
+        description: 需要避让的探头数量
+        type: integer
+      route_count:
+        description: 路线规划次数
+        type: integer
+      route_logs:
+        description: 路线规划日志
+        items:
+          $ref: '#/definitions/apis.DebugLogsResp'
+        type: array
     type: object
   apis.ProbeResp:
     properties:
